--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Economica" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src = "functions.js" type="text/javascript"></script>
 	</head>
 	<body>
 
@@ -32,7 +34,8 @@
         			 <input type="email" placeholder="Email">
        				 <input type="password" placeholder="Password">
 
-        			<button type="submit" class="pure-button pure-button-primary">Sign in</button>
+        			<button id = "sign-in-button" type="submit" class="pure-button pure-button-primary">Sign in</button>
+        			<button id = "register-button" type="submit" class="pure-button pure-button-inverted">Register</button>
     			</fieldset>
 			</form>
 
@@ -45,6 +48,23 @@
 	</body>
 
 	<footer class="pure-g">
-		<p class="center island pure-u-5-5" >By Demetrios and Thaddeus</p>
+		<p class="center island pure-u-3-5" >By Demetrios and Thaddeus</p>
 	<footer>
+
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$main  = $("main") ; 
+	    	$("#register-button").click(function(){
+
+	        	$("#sign-in-form").remove() ; 
+	        	var html =  getRegisterHtml() ; 
+	        	$main.hide() ; 
+	        	$main.append(html) ; 
+	        	$main.fadeIn();
+	   			applyRegisterLogic() ;
+	    	});
+
+	    	
+		});
+	</script>	
 </html>
