--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src = "addProducts.js" type="text/javascript"></script>
 		<script src = "functions.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -16,6 +17,7 @@
 					<div class="pure-menu pure-menu-horizontal">
 
     					<a href="#" class="pure-menu-heading on-dark-text" id="site-title">Comp 433 WebClient</a>
+    					<div id="current-user" class="pure-menu-item"></div>
     				
 					</div>
 
@@ -52,6 +54,9 @@
 	<footer>
 
 	<script type="text/javascript">
+		//variables declaration:
+		currentUser = null ;
+
 		$(document).ready(function(){
 			console.log("Yeah") ; 
 			$main  = $("main") ; 
@@ -67,5 +72,7 @@
 
 	    	
 		});
-	</script>	
+	</script>
+
+	
 </html>
