--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src = "customerView.js" type="text/javascript"></script>
 		<script src = "addProducts.js" type="text/javascript"></script>
 		<script src = "functions.js" type="text/javascript"></script>
 	</head>
@@ -61,6 +62,7 @@
 			console.log("Yeah") ;
 			$main  = $("main") ;
 			applySignInLogic();
+			skipLogin(false) ; 
 	    	$("#register-button").click(function(){
 	    		console.log("yeah");
 	        	$("#sign-in-form").remove() ;
@@ -73,6 +75,17 @@
 
 
 		});
+
+		function skipLogin(b){
+			if (b == true){
+				$("#sign-in-form").remove() ;
+	        	var html =  getRegisterHtml() ;
+	        	$main.hide() ;
+	        	$main.append(html) ;
+	        	$main.fadeIn();
+	   			applyRegisterLogic() ;
+			}
+		}
 	</script>
 
 
