renamed addProducts to partnerView, added API key to partner methods, removed default values, updated some scripts

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src = "customerView.js" type="text/javascript"></script>
-		<script src = "addProducts.js" type="text/javascript"></script>
+		<script src = "partnerView.js" type="text/javascript"></script>
 		<script src = "functions.js" type="text/javascript"></script>
 	</head>
 	<body>
